--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "hoek": "^5.0.3",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.0"
   },
